--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "@angular/platform-browser-dynamic": "^16.1.0",
     "@angular/router": "^16.1.0",
     "@auth0/auth0-angular": "^2.2.0",
+    "@ngrx/effects": "^16.1.0",
+    "@ngrx/entity": "^16.1.0",
+    "@ngrx/store": "^16.1.0",
     "lodash-es": "^4.17.21",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
